--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     
     </header>
     <main>
-        <section class="section">
+        <section class="section-one">
             <div class="container">
                 <h1 class="first-header">Effective Solutions for Your Business</h1>
                 <button class="button-set" type="button">Order Service</button>
