--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
         </section>
     
-        <section class="section">
+        <section class="section-two">
                 <div class="container">
                     <h2 class="visually-hidden">Features</h2>
                     <ul class="features-list">
